 * @zemit and zemit() will now show the executor the message, if he's in a
   a room on the right zone. Suggested by Paige. [MG]

Locks:
 * objid locks are now turned into =-locks by the lock parser. The clearing
   of references to deleted objects makes objid locks extraneous. [SW]
 * Internal changes to validation of 'name^string' locks to use perfect
   hash tables to validate the name. [SW]
 
Commands:
 * @switch and @switch/regexp set $0-$9 for glob or pattern captures. [GM]
 * @notify/setq can alter Q-registers of a semaphore queue entry before
   dequeueing it. [GM]
 * 'teach' now takes a /list switch, which lets it run an action list
   instead of a single command. [MG]
 * @force, @switch and @hook/override now all take an /inline switch, which
   can be further modified with /clearregs, /localize and /nobreak to run
   their actionlists without queueing (replaces /inplace). @include also
   takes those three switches. See the help for more info. [MG]
 * @retry, which causes a queue entry to restart from the beginning. Useful
   for coding loops without the queue delay. [GM]
   
Substitutions:
 * $<name> for accessing regexp substitutions can now have evaluation inside
   the <>s: $<%qa>. [GM]
 * %q<foo> can access named Q-registers. %q<%qa> can work as a q-register
   dereference. [GM]
 * New %= substitution, which evaluates to the dbref/attribute currently
   being evaluated. Useful for coding things which loop. [MG]

Attributes:
 * Branch attributes now show the 'branch' attribute flag in lflags(). [MG]
 * no_inherit and no_clone weren't propagated down attribute trees as
   stated in the help, but now are. [MG]
 * The debug and no_debug attribute flags now affect attributes which are
   queued (via $-commands, @trigger, etc) as well as ufun()'d. Suggested
   by Wiggles. [MG]
 
Functions:
 * switch() sets $0-$9 for glob captures.
 * setq(), regmatch(), strmatch() and sql() accept q-register names of
   more than one character. [GM]